--- a/book_cover/BookParameters.tex
+++ b/book_cover/BookParameters.tex
@@ -24,8 +24,8 @@
 
 %\def\ShowCoverStatistics{}% Enable to show some numbers on back cover.
 
-\def\TheMainTitle{Linear Algebra}
-\def\TheSubTitle{MAT2040 Notebook}
+\def\TheMainTitle{Mathematical Analysis}
+\def\TheSubTitle{MAT2006 Notebook}
 \def\TheSubTitleA{Hey!}
 \def\TheSubTitleB{Why Not Read This One?}
 \def\TheBookSeries{}
@@ -116,7 +116,7 @@
 \textsf{\textbf{World War II and the Manhattan Project} -- a group of Hungarian scientists that included émigré physicist Leó Szilárd attempted to alert Washington.}}
 
 \def\BackDescription{% Typically max 2000-4000 characters
-\textsf{\textbf{Grade Descriptor of A} -- Outstanding performance on solving linear or nonlinear ordinary differential equations and has the ability to synthesize and apply the basic theory of ODEs to novel situations in a manner that would surpass the expectation at this level or could be common at higher levels of study or research.\\
+\textsf{\textbf{Grade Descriptor of A} -- Outstanding performance on Mathematical Analysis or some advanced techniques and has the ability to synthesize and apply the basic theory of Mathematical Analysis to novel situations in a manner that would surpass the expectation at this level or could be common at higher levels of study or research.\\
 \textbf{Grade Descriptor of F} -- Unsatisfactory performance on a number of learning outcomes, or failure to meet specified assessment requirements. In other words, you perform too bad on final!
 }}
 
