--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@ Linear Algebra}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Only Dedication (optional) 
-%\dedication{To my parents}
+%\dedication{To my girlfriend Jianyu Yang}
 
 \tableofcontents
 
