--- a/main.tex
+++ b/main.tex
@@ -14,8 +14,13 @@ Linear Algebra}
 
 \subtitle{MAT2040 Notebook}
 
-\AuAff{Prof. Tom Luo\\ The Chinese University of Hongkong, Shenzhen}
-\AuAff{Prof. Ruoyu Sun\\ University of Illinois Urbana-Champaign}
+\AuAff{
+Lecturer\\
+Prof. Tom Luo\\ The Chinese University of Hongkong, Shenzhen}
+\AuAff{Lecturer\\Prof. Ruoyu Sun\\ University of Illinois Urbana-Champaign}
+\AuAff{
+Tex Written By\\
+Mr. Jie Wang\\ The Chinese University of Hongkong, Shenzhen}
 %% \\ will start a new line.
 
 
